--- a/generate/rates.html
+++ b/generate/rates.html
@@ -10,7 +10,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-    <title>Skyplex rates generate</title>
+    <title>Currency rates generate</title>
 </head>
 <body class="dark">
     <section class="download-steps header-bar" style="top: initial; height: 86px;">
